appId: com.p5
---
- tapOn: "Add"
- inputText: "Hello World"
- tapOn: "Submit"
- assertVisible: "Hello World"
